<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewBookFragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:id="@+id/inner_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00CC99">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Book"
            android:id="@+id/top_header_auther_create"
            android:textSize="40sp"
            android:layout_marginTop="120dp"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            />
        <EditText
            android:id="@+id/auther_id"
            android:hint="@string/book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:visibility="gone"
            android:padding="8dp"
            android:background="#fff" />
        <EditText
            android:id="@+id/book_title"
            android:hint="@string/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="#fff" />

        <EditText
            android:id="@+id/book_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="#fff"
            android:hint="@string/book_isbn"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/book_title" />


        <EditText
            android:id="@+id/publish_date_mine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="#fff"
            android:hint="@string/publish_date"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/book_isbn" />

        <Button
            android:id="@+id/btn_add_auther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/colorGreen"
            android:background="@color/colorWhite"
            android:layout_below="@+id/publish_date_mine"
            android:layout_marginTop="17dp"
            android:layout_alignLeft="@+id/publish_date_mine"
            android:layout_alignRight="@+id/publish_date_mine"
            android:layout_alignStart="@+id/publish_date_mine"
            android:layout_alignEnd="@+id/publish_date_mine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AutherGoToHome"
            android:textColor="#fff"
            android:text="@string/go_to_home"
            android:layout_below="@+id/btn_add_auther"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp" />

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</FrameLayout>