<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    >

    <RelativeLayout
        android:id="@+id/inner_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00CC99">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Auther"
            android:textSize="40sp"
            android:layout_marginTop="120dp"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            />
        <EditText
            android:id="@+id/auther_name"
            android:hint="@string/auther_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="#fff" />

        <EditText
            android:id="@+id/auther_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="#fff"
            android:hint="@string/auther_city"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/auther_name" />

        <EditText
            android:id="@+id/auther_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="#fff"
            android:hint="@string/auther_gender"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/auther_city" />

        <Button
            android:id="@+id/btn_add_auther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/colorGreen"
            android:background="@color/colorWhite"
            android:layout_below="@+id/auther_gender"
            android:layout_marginTop="17dp"
            android:onClick="addAuther"
            android:layout_alignLeft="@+id/auther_gender"
            android:layout_alignRight="@+id/auther_gender"
            android:layout_alignStart="@+id/auther_gender"
            android:layout_alignEnd="@+id/auther_gender" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            android:textColor="#fff"
            android:onClick="goToHome"
            android:text="@string/go_to_home"
            android:layout_below="@+id/btn_add_auther"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp" />

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>