<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context=".FirebaseSignupActivity">

    <RelativeLayout
        android:id="@+id/inner_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00CC99">

        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="#fff" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:inputType="textPassword"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="#fff"
            android:hint="@string/password"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/email" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/colorGreen"
            android:background="@color/colorWhite"
            android:layout_below="@+id/password"
            android:layout_marginTop="17dp"
            android:layout_alignLeft="@+id/password"
            android:layout_alignRight="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_alignEnd="@+id/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signin_text"
            android:textColor="#fff"
            android:text="@string/already_a_member_please_login"
            android:layout_below="@+id/btn_signup"
            android:layout_centerHorizontal="true"
            android:onClick="signinPage"
            android:layout_marginTop="34dp" />

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>